--- a/app/src/main/res/layout/fav_rv.xml
+++ b/app/src/main/res/layout/fav_rv.xml
@@ -104,7 +104,7 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/delete_fav"
                 android:layout_width="33dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
