--- a/app/src/main/res/layout/fragment_map2.xml
+++ b/app/src/main/res/layout/fragment_map2.xml
@@ -6,6 +6,8 @@
     tools:context=".fragment.MapFragment"
 >
 
+
+
     <fragment
 
         android:id="@+id/map"
@@ -13,6 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragment.MapFragment">
+
     </fragment>
+
+    <ImageView
+        android:id="@+id/search_btn"
+        android:layout_width="126dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:background="@drawable/search_button" />
 
 </FrameLayout>
