--- a/app/src/main/res/layout/add.xml
+++ b/app/src/main/res/layout/add.xml
@@ -228,6 +228,7 @@
                 android:textColorHint="@color/texthint"
                 android:layout_marginStart="@dimen/appbar_padding_top"
                 android:layout_weight="1"
+                android:lines="3"
                 android:hint="@string/example" />
 
 
