--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#232F34</color>
     <color name="colorPrimaryDark">#F9AA33</color>
     <color name="colorAccent">#344955</color>
-    <color name="texthint">#7E99A7</color>
-    <color name="t">#9C9D9E</color>
+    <color name="texthint">#536570</color>
+    <color name="t">#E9E6D2</color>
 </resources>
