--- a/app/src/main/res/layout/activity_statement_info.xml
+++ b/app/src/main/res/layout/activity_statement_info.xml
@@ -62,6 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:background="@color/t"
 
 
                 >
@@ -165,7 +166,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="122dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@color/t">
 
                 <LinearLayout
                     android:layout_width="match_parent"
