--- a/app/src/main/res/layout/add.xml
+++ b/app/src/main/res/layout/add.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SearchActivity">
+    tools:context=".activity.SearchActivity"
+    android:background="@color/t">
 
 
 
@@ -19,13 +20,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="16dp"
-            android:layout_marginHorizontal="8dp"
+            android:layout_marginHorizontal="@dimen/fab_margin"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView10"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_marginTop="14dp"
                 app:srcCompat="@drawable/coin" />
 
@@ -43,8 +44,8 @@
 
             <ImageView
                 android:id="@+id/imageView11"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_marginTop="14dp"
                 android:layout_marginStart="32dp"
                 app:srcCompat="@drawable/rooms" />
@@ -61,8 +62,8 @@
 
             <ImageView
                 android:id="@+id/imageView12"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_marginTop="14dp"
                 android:layout_marginStart="32dp"
                 app:srcCompat="@drawable/floors" />
@@ -99,7 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/appbar_padding_top"
+                android:layout_marginStart="@dimen/fab_margin"
                 android:text="Location"
                 android:textSize="18sp"/>
 
@@ -128,7 +129,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="@dimen/fab_margin"
-            android:layout_marginHorizontal="@dimen/appbar_padding_top"
+            android:layout_marginHorizontal="@dimen/fab_margin"
             android:orientation="horizontal">
 
             <TextView
@@ -176,13 +177,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="@dimen/fab_margin"
-            android:layout_marginHorizontal="@dimen/appbar_padding_top"
+            android:layout_marginHorizontal="@dimen/fab_margin"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView13"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_gravity="center_vertical"
                 app:srcCompat="@drawable/address_2" />
 
@@ -209,13 +210,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/fab_margin"
-            android:layout_marginHorizontal="@dimen/appbar_padding_top"
+            android:layout_marginHorizontal="@dimen/fab_margin"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView14"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_gravity="center_vertical"
                 app:srcCompat="@drawable/infos" />
 
