--- a/app/src/main/res/layout/email_password.xml
+++ b/app/src/main/res/layout/email_password.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context=".activity.EmailPasswordActivity">
+    tools:context=".activity.EmailPasswordActivity"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/edit_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="8dp"
+        android:gravity="center_vertical"
+        android:layout_marginTop="250dp"
+        android:background="@color/t"
+        android:layout_marginHorizontal="@dimen/fab_margin"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/email_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginTop="8dp"
+            android:ems="10"
             android:hint="@string/enter_your_email"
             android:inputType="textEmailAddress"
             android:paddingStart="@dimen/appbar_padding_top"
@@ -32,8 +35,8 @@
             android:id="@+id/password_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginTop="8dp"
+            android:ems="10"
             android:hint="@string/enter_your_password"
             android:inputType="textPassword"
             android:paddingStart="@dimen/appbar_padding_top"
@@ -41,37 +44,31 @@
             android:textColorHint="@color/texthint"
             android:textSize="18sp" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/fab_max_margin"
-    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/login_img_email_activity"
-        android:layout_width="@dimen/button_wigth"
-        android:layout_height="@dimen/button_heigth"
-        android:layout_gravity="end"
-        android:layout_marginTop="@dimen/fab_margin"
-        android:layout_weight="1"
-        android:layout_marginEnd="42dp"
-android:layout_marginStart="@dimen/fab_margin"
-        android:background="@drawable/login_button" />
+        <ImageView
+            android:id="@+id/login_img_email_activity"
+            android:layout_width="@dimen/button_wigth"
+            android:layout_height="@dimen/button_heigth"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="@dimen/appbar_padding_top"
+            android:layout_marginVertical="@dimen/fab_margin"
+            android:layout_weight="1"
+            android:background="@drawable/login_button" />
 
-    <ImageView
-        android:id="@+id/create_img_email_activity"
-        android:layout_width="@dimen/button_wigth"
-        android:layout_height="@dimen/button_heigth"
-        android:layout_gravity="end"
-android:layout_marginStart="42dp"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginTop="@dimen/fab_margin"
-        android:layout_weight="1"
-        android:background="@drawable/create_button" />
 
-</LinearLayout>
 
 
     </LinearLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/create_img_email_activity"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:background="@drawable/create_button"/>
+
+
+
+</RelativeLayout>
