--- a/app/src/main/res/layout/fav_rv.xml
+++ b/app/src/main/res/layout/fav_rv.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/t"
 
 
     >
@@ -15,7 +16,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/colorAccent"
-            android:layout_margin="@dimen/appbar_padding_top"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin"
             >
 
             <ImageView
