--- a/app/src/main/res/layout/my_stat_item.xml
+++ b/app/src/main/res/layout/my_stat_item.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@color/colorAccent"
-        android:layout_margin="@dimen/appbar_padding_top"
+        android:layout_marginVertical="@dimen/appbar_padding_top"
+        android:layout_marginHorizontal="@dimen/fab_margin"
         >
 
         <ImageView
@@ -101,28 +102,25 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="99dp"
-            android:orientation="vertical">
+
 
         <ImageView
             android:id="@+id/delete_my_stat"
-            android:layout_width="20dp"
+            android:layout_width="22dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="86dp"
             app:srcCompat="@drawable/delete" />
 
 
-        </LinearLayout>
+
 
 
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_marginHorizontal="8dp"
-        android:layout_height="1dp"
+        android:layout_marginHorizontal="@dimen/fab_margin"
+        android:layout_height="3dp"
         android:background="@color/colorPrimary"/>
 
 
