--- a/app/src/main/res/layout/email_password.xml
+++ b/app/src/main/res/layout/email_password.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:layout_marginTop="250dp"
-        android:background="@color/t"
         android:layout_marginHorizontal="@dimen/fab_margin"
         android:orientation="vertical">
 
@@ -22,52 +21,68 @@
             android:id="@+id/email_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:hint="@string/enter_your_email"
+            android:layout_margin="@dimen/fab_margin"
+            android:padding="15dp"
+            android:background="@drawable/email_shape"
+            android:drawableLeft="@drawable/email_icon"
+            android:drawablePadding="10dp"
             android:inputType="textEmailAddress"
-            android:paddingStart="@dimen/appbar_padding_top"
-            android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/texthint"
-            android:textSize="18sp" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHighlight="@color/colorPrimaryDark"
+            android:hint="Email"
+            />
+
 
         <EditText
             android:id="@+id/password_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:hint="@string/enter_your_password"
+            android:layout_margin="@dimen/fab_margin"
+            android:padding="15dp"
+            android:background="@drawable/email_shape"
+            android:drawableLeft="@drawable/lock_icon"
+            android:drawablePadding="10dp"
             android:inputType="textPassword"
-            android:paddingStart="@dimen/appbar_padding_top"
-            android:textColor="@color/colorPrimaryDark"
+            android:hint="Password"
             android:textColorHint="@color/texthint"
-            android:textSize="18sp" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHighlight="@color/colorPrimaryDark"/>
 
 
-        <ImageView
-            android:id="@+id/login_img_email_activity"
-            android:layout_width="@dimen/button_wigth"
-            android:layout_height="@dimen/button_heigth"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginStart="@dimen/appbar_padding_top"
-            android:layout_marginVertical="@dimen/fab_margin"
-            android:layout_weight="1"
-            android:background="@drawable/login_button" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/login_img_email_activity"
+                android:layout_width="@dimen/button_wigth"
+                android:layout_height="@dimen/button_heigth"
+                android:layout_marginHorizontal="@dimen/fab_margin"
+                android:layout_marginVertical="@dimen/fab_margin"
+                android:layout_weight="1"
+                android:background="@drawable/login_button" />
+
+            <ImageView
+                android:id="@+id/create_img_email_activity"
+                android:layout_width="120dp"
+                android:layout_height="35dp"
+                android:layout_marginHorizontal="@dimen/fab_margin"
+                android:layout_marginVertical="@dimen/fab_margin"
+
+                android:layout_weight="1"
+                android:background="@drawable/create_button" />
+
+
+        </LinearLayout>
+
+
 
 
 
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/create_img_email_activity"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_width="120dp"
-        android:layout_height="35dp"
-        android:background="@drawable/create_button"/>
 
 
 
