--- a/app/src/main/res/layout/fav_rv.xml
+++ b/app/src/main/res/layout/fav_rv.xml
@@ -17,12 +17,12 @@
             android:orientation="horizontal"
             android:background="@color/colorAccent"
             android:layout_marginHorizontal="@dimen/fab_margin"
-            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginVertical="@dimen/appbar_padding_top"
             >
 
             <ImageView
                 android:id="@+id/fav_img"
-                android:layout_width="80dp"
+                android:layout_width="115dp"
                 android:layout_height="80dp"
                 android:layout_margin="8dp"
                 android:scaleType="centerCrop"
@@ -71,7 +71,7 @@
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/fab_margin"
                 android:orientation="vertical">
 
                 <TextView
@@ -109,7 +109,7 @@
                 android:id="@+id/delete_fav"
                 android:layout_width="26dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="90dp"
+                android:layout_marginStart="35dp"
                 android:layout_marginTop="8dp"
                 app:srcCompat="@drawable/delete" />
 
@@ -117,9 +117,10 @@
         </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_marginHorizontal="8dp"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimary"/>
+        android:layout_marginHorizontal="@dimen/fab_margin"
+        android:layout_height="3dp"
+        android:background="@color/colorPrimary"
+        />
 
 
 </LinearLayout>
