--- a/app/src/main/res/layout/favoritelist_activity.xml
+++ b/app/src/main/res/layout/favoritelist_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/t"
 
     >
 
@@ -13,14 +14,14 @@
         android:gravity="center_horizontal"
         android:textColor="@color/colorPrimary"
         android:text="MY FAVORITE LIST"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/favorit_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/t">
+        >
 
     </android.support.v7.widget.RecyclerView>
 
