--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,20 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".fragment.SearchFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragment.SearchFragment"
+    android:background="@color/t"
+>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="159dp"
-        android:layout_marginTop="54dp"
-        android:layout_marginHorizontal="@dimen/appbar_padding_top"
-        android:background="@drawable/view_grey" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/appbar_padding_top"
+
         android:orientation="vertical">
 
 
@@ -24,7 +21,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:background="@drawable/search_view"
+            android:background="@drawable/emblem"
             android:gravity="center_horizontal" />
 
 
@@ -42,7 +39,7 @@
                 android:layout_weight="1"
                 android:text="By Location"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -52,7 +49,7 @@
                 android:layout_marginStart="30dp"
                 android:text="By Category"
                 android:textColor="@color/colorPrimary"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -75,7 +72,7 @@
                 android:id="@+id/cat_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/fab_max_margin"
+                android:layout_marginStart="@dimen/appbar_padding_top"
                 android:layout_weight="1"
                 android:text="RENT"
                 android:textColor="@color/colorPrimary"
@@ -93,19 +90,25 @@
                 android:id="@+id/cancel_btn"
                 android:layout_width="139dp"
                 android:layout_height="37dp"
-                android:background="@drawable/cancel_button" />
+                android:layout_weight="1"
+                android:layout_marginVertical="@dimen/fab_margin"
+                android:layout_marginHorizontal="40dp"
+                android:background="@drawable/cancel" />
 
 
             <ImageView
                 android:id="@+id/ok_btn"
                 android:layout_width="139dp"
                 android:layout_height="37dp"
-                android:layout_marginStart="50dp"
-                android:background="@drawable/ok_button" />
+                android:layout_weight="1"
+                android:layout_marginVertical="@dimen/fab_margin"
+                android:layout_marginHorizontal="40dp"
+                android:background="@drawable/ok" />
 
         </LinearLayout>
 
     </LinearLayout>
+
 
 
 </FrameLayout>
