--- a/app/src/main/res/layout/fragment_user_main_home.xml
+++ b/app/src/main/res/layout/fragment_user_main_home.xml
@@ -78,22 +78,6 @@
             android:background="@color/colorPrimaryDark"/>
 
         <TextView
-            android:id="@+id/history_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="History"
-            android:layout_marginStart="@dimen/fab_margin"
-            android:layout_marginTop="@dimen/fab_margin"
-            android:textSize="20sp"
-            android:textColor="@color/colorPrimary" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginHorizontal="@dimen/fab_margin"
-            android:layout_marginTop="@dimen/fab_margin"
-            android:background="@color/colorPrimaryDark"/>
-
-        <TextView
             android:id="@+id/notification_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -137,7 +121,7 @@
             android:layout_height="55dp"
             android:layout_marginTop="@dimen/fab_margin"
             android:layout_marginEnd="@dimen/fab_margin"
-            android:layout_gravity="end"
+            android:layout_gravity="end|bottom"
             app:srcCompat="@drawable/add_button" />
     </LinearLayout>
 
